Improved statistics command, making auto updater. Added some documentation